Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Bbs-io.github.io by bbs-io</title>
+    <title>BBS.io by bbs-io</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Bbs-io.github.io</h1>
+        <h1>BBS.io</h1>
         <h2></h2>
         <a href="https://github.com/bbs-io" class="button"><small>Follow me on</small> GitHub</a>
       </div>
@@ -29,15 +29,12 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="welcome-to-bbsio" class="anchor" href="#welcome-to-bbsio"><span class="octicon octicon-link"></span></a>Welcome to BBS.io</h1>
-
-<h2>
-<a name="dynamic-dns" class="anchor" href="#dynamic-dns"><span class="octicon octicon-link"></span></a>Dynamic DNS</h2>
+<a name="dynamic-dns" class="anchor" href="#dynamic-dns"><span class="octicon octicon-link"></span></a>Dynamic DNS</h1>
 
 <p>You <a href="http://freedns.afraid.org/domain/registry/?sort=5&amp;q=bbs.io&amp;submit=SEARCH">YOUR.bbs.io</a> is available via <a href="http://freedns.afraid.org/">FreeDNS</a>.</p>
 
-<h2>
-<a name="bbs-io-server" class="anchor" href="#bbs-io-server"><span class="octicon octicon-link"></span></a>BBS-io Server</h2>
+<h1>
+<a name="bbs-io-server" class="anchor" href="#bbs-io-server"><span class="octicon octicon-link"></span></a>BBS-io Server</h1>
 
 <p>The <a href="https://github.com/bbs-io/bbs">BBS-io Server</a> project is a work in progress.</p>
         </section>
